version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/NASTRAN/OptionsControlCommand.rst.txt
.. vale off



:class:`OptionsControlCommand`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.NASTRAN.OptionsControlCommand(iOptionsControlCommand: Ansys.Common.Interop.FEParsePlugin_NASTRAN.IOptionsControlCommand)

   Bases: :py:obj:`object`


   
   Options control command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: OptionsControlCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Arguments`
            - Gets the arguments.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~OptionLines`
            - Gets the option lines.







Property detail
---------------
.. py:property:: Arguments
   :type: Optional[tuple[Any]]


   
   Gets the arguments.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: OptionLines
   :type: Optional[tuple[Any]]


   
   Gets the option lines.
















   ..
       !! processed by numpydoc !!







.. vale on